Added docker/docker-compose functionality to setup backend and database automatically.

--- a/ParkingLotBusiness/.env
+++ b/ParkingLotBusiness/.env
@@ -6,6 +6,9 @@ TWO_WHEELER_FARE_PER_MINUTE=1
 SERVER_HOST='localhost'
 SERVER_PORT=6001
 
+DB_HOST="db" # Name of docker service, running the postgresql app
+DB_PORT=5432 # Port on which the postgresql server is running, inside docker service 
 DB_NAME="vehicledb"
 DB_USER="admin"
 DB_PASSWORD="123456"
+
