--- a/ParkingLotApplication/package.json
+++ b/ParkingLotApplication/package.json
@@ -2,7 +2,7 @@
   "name": "parking-lot-application",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "./node_modules/.bin/ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
